--- a/soundspinner/index.html
+++ b/soundspinner/index.html
@@ -5,10 +5,10 @@
 	<meta name="description" content="Sound Spinner">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="./build/Main.js"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-  <link rel="manifest" href="./site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./chrome-music-lab/soundspinner/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./chrome-music-lab/soundspinner/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./chrome-music-lab/soundspinner/favicon-16x16.png">
+  <link rel="manifest" href="./chrome-music-lab/soundspinner/site.webmanifest">
 </head>
 <body>
 </body>
