--- a/soundspinner/index.html
+++ b/soundspinner/index.html
@@ -9,7 +9,44 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./chrome-music-lab/soundspinner/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./chrome-music-lab/soundspinner/favicon-16x16.png">
   <link rel="manifest" href="./chrome-music-lab/soundspinner/site.webmanifest">
+  <style>
+    /* Style the header with a grey background and some padding */
+    .header {
+      overflow: hidden;
+      background-color: #f1f1f1;
+      padding: 10px 10px;
+			box-shadow: 1px 1px 3px 3px #ccc;
+    }
+
+    /* Style the header links */
+    .header a {
+      float: left;
+      color: black;
+      text-align: center;
+      padding: 10px;
+      text-decoration: none;
+      font-size: 10px;
+      line-height: 10px;
+      border-radius: 10px;
+    }
+
+    /* Style the active/current link*/
+    .header a.active {
+      background-color: #FFB729;
+      color: white;
+    }
+
+    /* Float the link section to the right */
+    .header-right {
+      float: right;
+    }
+  </style>
 </head>
 <body>
+<div class="header">
+  <div class="header-right">
+    <a class="active" href="//musiclab.chromeexperiments.com/Voice-Spinner/">Prior Art</a>
+  </div>
+</div>
 </body>
 </html>
