--- a/soundspinner/index.html
+++ b/soundspinner/index.html
@@ -4,11 +4,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="description" content="Sound Spinner">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="./build/Main.js"></script>
-  <link rel="apple-touch-icon" sizes="180x180" href="./chrome-music-lab/soundspinner/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./chrome-music-lab/soundspinner/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./chrome-music-lab/soundspinner/favicon-16x16.png">
-  <link rel="manifest" href="./chrome-music-lab/soundspinner/site.webmanifest">
+	<script type="text/javascript" src="https://colin-scott.github.io/chrome-music-lab/soundspinner/build/Main.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="https://colin-scott.github.io/chrome-music-lab/soundspinner/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://colin-scott.github.io/chrome-music-lab/soundspinner/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://colin-scott.github.io/chrome-music-lab/soundspinner/favicon-16x16.png">
+  <link rel="manifest" href="https://colin-scott.github.io/chrome-music-lab/soundspinner/site.webmanifest">
   <style>
     /* Style the header with a grey background and some padding */
     .header {
